mosaic/src/tests/integration/snapshots/mosaic__tests__integration__resize_right__cannot_resize_right_when_pane_to_the_left_is_at_minimum_width-2.snap
---
source: src/tests/integration/resize_right.rs
expression: snapshot
---
line1-bbb
line2-bbb
line3-bbb
line4-bbb
line5-bbb
line6-bbb
line7-bbb
line8-bbb
line9-bbb
line10-bb
line11-bb
line12-bb
line13-bb
line14-bb
line15-bb
line16-bb
line17-bb
line18-bb
line19-bb
prompt $ 
