mosaic/src/tests/integration/snapshots/mosaic__tests__integration__resize_right__cannot_resize_right_when_pane_to_the_left_is_at_minimum_width-3.snap
---
source: src/tests/integration/resize_right.rs
expression: snapshot
---
14-b│█   
b   │    
line│    
15-b│    
b   │    
line│    
16-b│    
b   │    
line│    
17-b│    
b   │    
line│    
18-b│    
b   │    
line│    
19-b│    
b   │    
prom│    
pt $│    
    │    
